--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,10 @@ mybatis:
 server:
   port: 8080
   servlet:
-   context-path: /api
+    context-path: /api
+#  session:
+#    cookie:
+#     domain:
 
 
 alibaba:
@@ -27,6 +30,14 @@ spring:
 #  mvc:
 #    pathmatch:
 #      matching-strategy: ANT_PATH_MATCHER
+  session:
+    store-type: redis
+    timeout: 86400
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
+        #      redis配置
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
@@ -36,6 +47,7 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除字段名
       logic-delete-value: 1 # 逻辑已删除值
       logic-not-delete-value: 0 # 逻辑未删除值
+#      swagger自動化接口配置
 knife4j:
   enable: true
   basic:
@@ -49,7 +61,7 @@ knife4j:
     description: "`这是友圈的接口测试"
     email: thisistheway0429@outlook.com
     concat: Dare Lucem
-    url: https://docs.xiaominfo.com
+    url: https://github.com/DareLucem
     version: v4.0
     license: Apache 2.0
     license-url: https://stackoverflow.com/
