--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>spring-session-data-redis</artifactId>
             <version>2.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.17.4</version>
+        </dependency>
 
         <!--        <dependency>-->
 <!--            <groupId>com.alibaba.cloud</groupId>-->
